# planar

./: Cargo.toml  README.md
crates/planar-cli/: Cargo.toml
crates/planar-cli/src/: build.rs  global.rs  init.rs  inspect.rs  main.rs  settings.rs
crates/planar-lsp/: Cargo.toml
crates/planar-lsp/editors/vscode/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
crates/planar-lsp/editors/vscode/src/: extension.ts
crates/planar-lsp/editors/vscode/syntaxes/: planardl.tmLanguage.json
crates/planar-lsp/src/: loader.rs  main.rs
crates/planar-pkg/: Cargo.toml
crates/planar-pkg/src/: bad.rs  config.rs  error.rs  lib.rs  var_registry.rs
crates/planar-pkg/src/model/: mod.rs  planardl.rs
crates/planar-pkg/src/packaging/: fetcher.rs  mod.rs  resolver.rs  target_info.rs
crates/planar-pkg/src/parser/: block.rs  convert.rs  ctx.rs  ensures.rs  mod.rs  node_schema.rs  parsable.rs  spanned.rs  typed_value.rs  utils.rs
crates/planar-pkg/src/schema/: definitions.rs  mod.rs  schema_context.rs  value_info.rs
crates/planar-pkg/src/tests/: mod.rs
crates/planar-pkg/src/tests/fixtures/: config.kdl
crates/planar-pkg/src/tests/snapshots/: planar_config__tests__tests__config.snap  planar_config__tests__tests__schema_serialization_snapshot.snap  planar_pkg__tests__tests__config.snap  planar_pkg__tests__tests__schema_serialization_snapshot.snap
crates/planar-runtime/: Cargo.toml
crates/planar-runtime/src/: stable_id.rs
crates/planarc/: Cargo.toml  build.rs
crates/planarc/src/: ast.rs  common.rs  error.rs  lib.rs  loader.rs  manifest.rs  module_loader.rs  pdl.rs  source_registry.rs  spanned.rs  unit.rs  utils.rs
crates/planarc/src/artifact/: builder.rs  header.rs  mod.rs  model.rs  reader.rs  writer.rs
crates/planarc/src/artifact/snapshots/: planarc__artifact__tests__program_roundtrip.snap
crates/planarc/src/compiler/: error.rs  mod.rs
crates/planarc/src/db/: mod.rs  schema_builder.rs
crates/planarc/src/linker/: dependency_graph.rs  error.rs  ids.rs  linked_ast.rs  linked_world.rs  linker.rs  lookup.rs  match_linker.rs  meta.rs  mod.rs  resolver.rs  symbol_table.rs
crates/planarc/src/linker/snapshots/: planarc__linker__linker__tests__linker_state_snapshot.snap
crates/planarc/src/lowering/: common.rs  ctx.rs  edge.rs  error.rs  extern_funcs.rs  facts.rs  grammar.rs  import.rs  mod.rs  module.rs  node.rs  query.rs  test_utils.rs  type_decl.rs
crates/planarc/src/lowering/snapshots/: planarc__lowering__extern_funcs__tests__extern_complex_module_name.snap  planarc__lowering__extern_funcs__tests__extern_operator_overload.snap  planarc__lowering__extern_funcs__tests__extern_with_multiple_fns.snap  planarc__lowering__extern_funcs__tests__simple_extern_module.snap  planarc__lowering__facts__tests__fact_complex_types_and_generics.snap  planarc__lowering__facts__tests__fact_with_refinements.snap  planarc__lowering__facts__tests__simple_fact.snap  planarc__lowering__query__tests__query_definition.snap  planarc__lowering__query__tests__query_definition_with_captures.snap  planarc__lowering__type_decl__tests__fold_in_refinement.snap.new  planarc__lowering__type_decl__tests__simple_type_decl.snap  planarc__lowering__type_decl__tests__type_decl_with_nested_refinement.snap  planarc__lowering__type_decl__tests__type_decl_with_refinement.snap
crates/planarc/src/snapshots/: planarc__loader__tests__json_basic.snap  planarc__loader__tests__yaml_basic.snap
crates/planarc/src/validator/: error.rs  grammar_registry.rs  mod.rs  query_validator.rs  wit_validator.rs
crates/planarc/tree-sitter-pdl/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
crates/planarc/tree-sitter-pdl/queries/: highlights.scm
crates/planarc/tree-sitter-pdl/src/: grammar.json  node-types.json  parser.c
crates/planarc/tree-sitter-pdl/test/: nginx-includes.pdl
crates/planarc/tree-sitter-pdl/test/corpus/: node.txt
