[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
planar-config-macro = { path = "crates/planar-config-macro" }
planarc = { path = "crates/planarc" }
planar-pkg = { path = "crates/planar-pkg" }

tree-sitter = { version = "0.25.10" }
insta = { version = "1.46.0", features = ["json"] }
miette = { version = "7.6.0", features = ["fancy", "serde"] }
kdl = "6.5.0"
thiserror = "2.0.17"
dirs = "6.0.0"
anyhow = "1.0" 
serde = { version = "1.0.228", features = ["derive"] }
petgraph = "0.8.3"
rayon = "1.11.0"
tracing = "0.1.44"
test-log = { version = "0.2.19", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
derive_more = { version = "2.1.1", features = ["full"]}
tempfile = "3.24.0"