[package]
name = "planar-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
planarc = { workspace = true }
planar-pkg = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18.3"
console = "0.16.2"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
futures = "0.3.31"
futures-util = "0.3.31"
