[package]
name = "planarc"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = { workspace = true }
serde = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
insta = { workspace = true }
petgraph = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }
tree-sitter-planardl = { workspace = true }
tree-sitter-tsquery = { path = "tree-sitter-query/" }
rkyv = { version = "0.8.14", features = ["bytecheck", "std"]}
xxhash-rust = { version = "0.8", features = ["xxh64"] }
libloading = "0.9.0"
type-sitter = "0.8.1"
type-sitter-lib = "0.8.1"
matchit = "0.9.1"
walkdir = "2.5.0"
strsim = "0.11.1"

[dev-dependencies]
insta = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }



[build-dependencies]
cc = "1.0"
type-sitter-gen = "0.8.1"
